--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csb-inspector": "^0.3.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.8.0"
   }
